# vizier

./: .gitignore  .graphify.toml  .hermes.md  .tmp_graphify_analyze.py  .tmp_graphify_build.py  .tmp_graphify_detect.py  .tmp_graphify_main.py  .tmp_graphify_query.py  .tmp_graphify_report.py  .tmp_graphify_serve.py  .tmp_graphify_watch.py  AGENTS.md  CLAUDE.md  CONTROL_TOWER.md  pyproject.toml  pyrightconfig.json
augments/listening/: __init__.py  collector.py  exceptions.py  scheduler.py  spike_detector.py  store.py  watchlist.py
config/: artifact_taxonomy.yaml  autonomy_rules.yaml  coaching_patterns.yaml  content_strategies.yaml  design_system_index.yaml  fast_paths.yaml  phase.yaml  postgrest.conf  retrieval_profiles.yaml  social_platforms.yaml  steward_domains.py  workflow_registry.yaml
config/brand_patterns/: premium_traditional.yaml
config/calendar/: malaysia_2026.yaml
config/clients/: _schema.yaml  autohub.yaml  default.yaml  dmb.yaml
config/code_switching/: rules.yaml
config/copy_patterns/: formal_bm.yaml
config/critique_templates/: childrens_narrative.md  document_coherence.md  poster_quality.md
config/document_scaffolds/: calendar.yaml  invoice.yaml  plan.yaml  profile.yaml  proposal.yaml  report.yaml
config/evaluations/: poster_production_ar_rawdhah.yaml  poster_production_dmb.yaml  poster_production_rtm.yaml
config/improvement_rules/: mutation_operators.yaml
connectors/: __init__.py  manual.py
contracts/: __init__.py  artifact_spec.py  coaching.py  context.py  interpreted_intent.py  knowledge.py  policy.py  poster.py  publishing.py  readiness.py  routing.py  trace.py
dashboard/: index.html  package-lock.json  package.json
docs/: HANDOVER_SPRINT_GPT.md  HANDOVER_SPRINT_GPT_FINAL.md  QUALITY_GAP_ANALYSIS_S21.md  S_DATA_SESSION_SPEC.md  VIZIER_ARCHITECTURE_v5_4_1.md  VIZIER_BUILD_quality_first_v1.md  VIZIER_BUILD_v1_3_1.md  VIZIER_BUILD_v2.md  VIZIER_MEMPALACE_RUNTIME_ADOPTION_REPORT_2026-04-08.md  VIZIER_POSTER_RUNTIME_ENHANCEMENT_REPORT_2026-04-09.md  VIZIER_POST_SPRINT_ROADMAP_v1_1.md  VIZIER_QUALITY_SPINE_REMEDIATION_REPORT_2026-04-08.md  VIZIER_TECH_SCOUT_INJECTION_CHECKLIST.md  parity_audit.yaml
middleware/: guardrails.py  observability.py  policy.py  quality_gate.py  quality_posture.py  runtime_controls.py
migrations/: core.sql  dashboard_views.sql  extended.sql
plugins/: vizier_tools_bridge.py
scripts/: calibrate_nima.py  check_plugin_drift.sh  cluster_d4_templates.py  ingest_operator_exemplars.py  install_plugin.sh  load_posteriq.py  pdf_to_exemplars.py  seed_exemplars.py  smoke.sh
tests/: conftest.py  test_book_production.py  test_brief_interpreter.py  test_calculate_delta.py  test_coaching.py  test_contracts.py  test_d4_templates.py  test_data_foundation.py  test_data_verification.py  test_e2e_layer1_connectivity.py  test_e2e_layer2_primitives.py  test_e2e_layer3_middleware.py  test_e2e_layer4_tools.py  test_e2e_layer5_workflows.py  test_e2e_layer5b_semantics.py  test_ebook_production.py  test_embeddings.py  test_gateway_metering.py  test_governed_path.py  test_illustrate.py  test_image_processing.py  test_improvement.py  test_integration_quality.py  test_interpreted_intent.py  test_knowledge_contracts.py  test_knowledge_spine.py  test_memory_labels.py  test_nima_config.py  test_operator_exemplars.py  test_orchestrate.py  test_plugin_deployment.py  test_policy.py  test_poster_contract.py  test_poster_pipeline.py  test_poster_reference_runtime.py  test_posteriq_loader.py  test_publish.py  test_quality_harness.py  test_research.py  test_ring_enforcement.py  (+14 more)
tools/: bizops.py  book_production.py  brief_interpreter.py  briefing.py  calibration.py  coaching.py  design_selector_api.py  ebook_production.py  executor.py  experiment.py  illustrate.py  image.py  improvement.py  invoice.py  knowledge.py  orchestrate.py  prompt_version.py  publish.py  quality_harness.py  registry.py  research.py  seeding.py  serial_fiction.py  steward.py  template_selector.py  visual_dna.py  visual_pipeline.py  visual_scoring.py  wisdom_vault.py  workflow_schema.py
utils/: call_llm.py  database.py  diagnostics.py  embeddings.py  idle_alarm.py  image_processing.py  knowledge.py  memory_labels.py  prayer_times.py  retrieval.py  spans.py  storage.py  trace_persist.py  workflow_registry.py
(+263 files in other folders)
