[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vizier"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "jinja2>=3.1",

    # Database
    "psycopg2-binary>=2.9",

    # Object storage
    "minio>=7.2",

    # Observability
    "langfuse>=2.0",

    # ML / Vision
    "open-clip-torch>=2.24",
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.40",
    "pillow>=10.0",

    # Image generation
    "fal-client>=0.4",

    # Document rendering
    "weasyprint>=60",
    "pypdf>=4.0",
    "ebooklib>=0.18",
    "python-pptx>=0.6",

    # Research / listening
    "yt-dlp>=2024.1",
    "youtube-transcript-api>=0.6",
    "pytrends>=4.9.0",
    "croniter>=2.0.0",

    # Messaging
    "python-telegram-bot>=22.0",

    # Browser automation
    "playwright>=1.40,<2",

    # Data / analysis
    "pandas>=2.0,<3",
    "matplotlib>=3.8,<4",

    # Visual QA
    "scikit-image>=0.22,<1",
    "pixelmatch>=0.3,<1",
    "opencv-python-headless>=4.9,<5",
    "pytesseract>=0.3,<1",

    # MCP
    "mcp>=1.0,<2",

    # Preference alignment
    "gepa>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
    "ruff>=0.4",
    "black>=24.0",
]

[tool.setuptools.packages.find]
include = [
    "contracts*",
    "middleware*",
    "tools*",
    "plugins*",
    "utils*",
    "augments*",
    "scripts*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
